added show route for each city

--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -12,7 +12,7 @@
         <ul>
           <% cities.forEach(city => { %>
               <li>
-                <a href="/cites/<%= city._id %>"><%= city.name %></a>
+                <a href="/cities/<%= city._id %>"><%= city.name %></a>
               </li>
           <% }); %>
         </ul>
