adds home page base content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <title>Trail Legs</title>
 </head>
 <body>
-    <h1> Home Page </h1>
+    <header>
+        <section>
+            <h3> Trail Legs </h3>
+            <i class="fa fa-bars"></i>
+            <nav>
+                <a href="/cities">Cities</a>
+            </nav>
+        </section>
+        <section>
+            <h1>Find Your City</h1>
+            <select name="select_city">
+                <option value="#">city name</option>
+            </select>
+        </section>
+    </header>
+    <main>
+        <h4>About Us</h4>
+        <article>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae aliquam deserunt tenetur sapiente odit voluptatem itaque aliquid placeat a harum esse sit laborum possimus consequuntur, dicta est at rem.
+        </article>
+    </main>
+    <footer>
+        <p>Copyright</p>
+    </footer>
 </body>
 </html>
