adds base content to all ejs files

--- a/views/cities/show.ejs
+++ b/views/cities/show.ejs
@@ -6,6 +6,28 @@
     <title>City Name</title>
 </head>
 <body>
-    <h1>City Name</h1>
+    <header>
+
+        <!-- navigation and app name -->
+        <section class="nav_name">
+            <h3> Trail Legs </h3>
+            <i class="fa fa-bars"></i>
+            <nav>
+                <a href="/home">Home</a>
+                <a href="/cities">Cities</a>
+            </nav>
+        </section>
+    </header>
+    <main>
+        
+        <!-- TODO add city name -->
+        <!-- TODO add trails list w/ trail name and location -->
+
+        <!-- create new trail icon -->
+        <i class="fas fa-plus-circle"></i>
+    </main>
+    <footer>
+        <p>Copyright</p>
+    </footer>
 </body>
 </html>
