--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -6,6 +6,35 @@
     <title>View Trail</title>
 </head>
 <body>
-    <h1>View Trail</h1>
+    <header>
+
+        <!-- navigation and app name -->
+        <section class="nav_name">
+            <h3> Trail Legs </h3>
+            <i class="fa fa-bars"></i>
+            <nav>
+                <a href="/home">Home</a>
+                <a href="/cities">Cities</a>
+                <!-- TODO add navigation to city -->
+            </nav>
+        </section>
+    </header>
+    <main>
+
+        <!-- TODO output trail name -->
+        <!-- TODO output trail location -->
+        <!-- TODO output trail city -->
+
+        <section class="icons">
+        <!-- delete icon -->
+        <i class="fas fa-trash"></i>
+
+        <!-- edit icon -->
+        <i class="fas fa-pen"></i>
+        </section>
+    </main>
+    <footer>
+        <p>Copyright</p>
+    </footer>
 </body>
 </html>
