--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -6,16 +6,31 @@
     <title>All Cities</title>
 </head>
 <body>
-    <h1>All Cities</h1>
-    <main>
-        <h2>List of Cities</h2>
-        <ul>
-          <% cities.forEach(city => { %>
-              <li>
-                <a href="/cities/<%= city._id %>"><%= city.name %></a>
-              </li>
-          <% }); %>
-        </ul>
-      </main>
+  <header>
+
+    <!-- navigation and app name -->
+    <section class="nav_name">
+        <h3> Trail Legs </h3>
+        <i class="fa fa-bars"></i>
+        <nav>
+            <a href="/home">Home</a>
+        </nav>
+    </section>
+  </header>
+  <main>
+    <h2>List of Cities</h2>
+
+    <!-- Loop through cities -->
+    <ul>
+      <% cities.forEach(city => { %>
+          <li>
+            <a href="/cities/<%= city._id %>"><%= city.name %></a>
+          </li>
+      <% }); %>
+    </ul>
+  </main>
+  <footer>
+      <p>Copyright</p>
+  </footer>
 </body>
 </html>
