--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,21 +9,33 @@
 </head>
 <body>
     <header>
-        <section>
+        <!-- navigation and app name -->
+        <section class="nav_name">
             <h3> Trail Legs </h3>
             <i class="fa fa-bars"></i>
             <nav>
+                <a href="/home">Home</a>
                 <a href="/cities">Cities</a>
             </nav>
         </section>
-        <section>
-            <h1>Find Your City</h1>
+
+        <!-- trail legs slogan -->
+        <section class="slogan">
+            <h1>Your favorite Trails</h1>
+            <h3>in one place</h3>
+        </section>
+
+    </header>
+    <main>
+        <!-- dropdown menu to select citiy -->
+        <section class="select-city">
+            <h2>Find Your City</h2>
             <select name="select_city">
                 <option value="#">city name</option>
             </select>
         </section>
-    </header>
-    <main>
+
+        <!-- about the app -->
         <h4>About Us</h4>
         <article>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae aliquam deserunt tenetur sapiente odit voluptatem itaque aliquid placeat a harum esse sit laborum possimus consequuntur, dicta est at rem.
