--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -13,7 +13,7 @@
         <h3> Trail Legs </h3>
         <i class="fa fa-bars"></i>
         <nav>
-            <a href="/home">Home</a>
+            <a href="/">Home</a>
         </nav>
     </section>
   </header>
