--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -13,7 +13,7 @@
             <h3> Trail Legs </h3>
             <i class="fa fa-bars"></i>
             <nav>
-                <a href="/home">Home</a>
+                <a href="/">Home</a>
                 <a href="/cities">Cities</a>
                 <!-- TODO add city name path -->
                 <!-- <a href="/cities/city._id">city name</a> -->
