--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -14,7 +14,7 @@
             <h3> Trail Legs </h3>
             <i class="fa fa-bars"></i>
             <nav>
-                <a href="/home">Home</a>
+                <a href="/">Home</a>
                 <a href="/cities">Cities</a>
                
                 <!-- TODO add city name path -->
