--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -28,10 +28,12 @@
 
         <section class="icons">
         <!-- delete icon -->
-        <i class="fas fa-trash"></i>
+        <i class="fa fa-trash"></i>
 
         <!-- edit icon -->
-        <i class="fas fa-pen"></i>
+        <i class="fa fas-pen"></i>
+
+
         </section>
     </main>
     <footer>
