--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -25,7 +25,7 @@
         </section>
     </header>
     <main>
-        <h1>Edit Trail Name</h1>
+        <h1>Create New Trail</h1>
         
         <!-- TODO route back to city name after creation -->
         <form action="/trails/<%= city._id %>" method="POST">
