--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -32,7 +32,7 @@
 
         <!-- edit icon -->
         <i class="fa fas-pen"></i>
-
+        <a href="/trails/<%=trail._id%>/edit">Edit</a>
 
         </section>
     </main>
