adds update/edit route and connects city to trail

--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -31,7 +31,7 @@
         <form action="/trails/<%= city._id %>" method="POST">
 
         <!-- dropdown menu of all cities -->
-        <select name="select_city">
+        <select name="city">
             <option value="<%=city._id%>"><%= city.name %></option>
         </select>
 
