--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -24,12 +24,14 @@
     <main>
         <h1>Edit Trail Name</h1>
         <!-- TODO route back to trail after edit -->
-        <form action="/trails/<%= trail._id %>" method="POST">
+        <form action="/trails/<%= trail._id %>?_method=PUT" method="POST">
 
         <!-- dropdown menu of all cities -->
-        <input type="text" name="city" placeholder="<%= trail.city %>">
-        <input type="text" name="name" placeholder="<%= trail.name %>">
-        <input type="text" name="location" placeholder="<%= trail.location %>">
+        <select name="city">
+            <option value="<%=trail.city%>"><%= trail.city %></option>
+        </select>
+        <input type="text" name="name" value="<%= trail.name %>">
+        <input type="text" name="location" value="<%= trail.location %>">
         <textarea name="description"cols="30" rows="10">
             <!-- TODO add whatever was in description before -->
         </textarea>
