--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/home.css">
     <title>Trail Legs</title>
@@ -31,7 +32,10 @@
         <section class="select-city">
             <h2>Find Your City</h2>
             <select name="select_city">
-                <option value="#">city name</option>
+                <% cities.forEach(city => { %>
+                    <option value="<%=city._id%>"><%=city.name%></option>
+                <% }) %>
+                
             </select>
         </section>
 
