--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="styles/home.css">
     <title>Edit Trail</title>
 </head>
 <body>
@@ -28,7 +30,7 @@
 
         <!-- dropdown menu of all cities -->
         <select name="city">
-            <option value="<%=trail.city%>"><%= trail.city.name %></option>
+            <option value="<%=trail.city%>"><%= trail.city %></option>
         </select>
         <input type="text" name="name" value="<%= trail.name %>">
         <input type="text" name="location" value="<%= trail.location %>">
