--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -30,7 +30,7 @@
 
         <!-- dropdown menu of all cities -->
         <select name="city">
-            <option value="<%=trail.city%>"><%= trail.city %></option>
+            <option value="<%=trail.city._id%>"><%= trail.city.name %></option>
         </select>
         <input type="text" name="name" value="<%= trail.name %>">
         <input type="text" name="location" value="<%= trail.location %>">
