adds base links to all ejs

--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <title>Edit Trail</title>
 </head>
 <body>
@@ -18,8 +18,7 @@
             <nav>
                 <a href="/">Home</a>
                 <a href="/cities">Cities</a>
-                <!-- TODO add city name path -->
-                <!-- <a href="/cities/city._id">city name</a> -->
+                <a href="/cities/<%=trail.city._id%>"><%=trail.city.name%></a>
             </nav>
         </section>
     </header>
