adds dropdown nav for all cities in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <title>Trail Legs</title>
 </head>
 <body>
@@ -29,16 +29,15 @@
     </header>
     <main>
         <!-- dropdown menu to select citiy -->
-        <section class="select-city">
-            <h2>Find Your City <i class="fa fa-angle-down"></i></h2>
-
+        <div class="select">
+            <h2 class="select_dropdown">Find Your City <i class="fa fa-angle-down"></i></h2>
+            <div class="select_list">
                     <% cities.forEach(city => { %>
-                        <ul>
-                            <li><a href="/cities/<%=city._id%>"><%=city.name%></a></li>
-                        </ul>
+                            <a href="/cities/<%=city._id%>" class="select_city"><%=city.name%></a>
                     <% }) %>
+            </div>
 
-        </section>
+        </div>
 
         <!-- about the app -->
         <h4>About Us</h4>
