--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
+        <h3> Trail Legs </h3>
         <!-- navigation and app name -->
-        <section class="nav_name">
-            <h3> Trail Legs </h3>
+        <div class="nav">
             <i class="fa fa-bars"></i>
-            <nav>
-                <a href="/">Home</a>
-                <a href="/cities">Cities</a>
-            </nav>
-        </section>
+            <div class="nav_list">
+                <a href="/" class="nav_link">Home</a>
+                <a href="/cities" class="nav_link">Cities</a>
+            </div>
+        </div>
 
         <!-- trail legs slogan -->
         <section class="slogan">
