adds image to trail show with text over the image

--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="/styles/new.css">
     <title>Create Trail</title>
 </head>
 <body>
@@ -36,6 +37,7 @@
         <input type="text" name="name" placeholder="Name">
         <input type="text" name="location" placeholder="Location">
         <textarea name="description"cols="30" rows="10" placeholder="Description of the trail..."></textarea>
+        <input type="text" name="image" placeholder="Image URL">
         <button type="submit"><i class="fas fa-check"></i></button>
         <a href="/cities/<%= city._id %>"><i class="fas fa-times"></i></a>
 
