--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/edit.css">
     <title>Edit Trail</title>
 </head>
 <body>
@@ -35,6 +35,7 @@
         <input type="text" name="location" value="<%= trail.location %>">
         <textarea name="description"cols="30" rows="10"><%=trail.description%>
         </textarea>
+        <input type="text" name="image" value="<%= trail.image %>">
         <button type="submit"><i class="fas fa-check"></i></button>
         <a href="/trails/<%= trail._id %>"><i class="fas fa-times"></i></a>
 
