--- a/public/styles/trails-show.css
+++ b/public/styles/trails-show.css
@@ -18,6 +18,9 @@
     height: 200px;
     width: 700px;
     overflow: hidden;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
