--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -4,8 +4,19 @@
     box-sizing: border-box;
 }
 
+:root {
+    /*  colors  */
+        --white: #f1f1f1;
+        --tan: #e0e0db;
+        --black: #1f1f1f;
+        --green: #404943;
+    /* font  */
+        --large-font: 'Raleway', Sans-Serif;
+        --small-font: 'Open Sans', Sans-Serif;
+}
+
 body {
-    background-color: #e0e0db;
+    background-color: var(--tan);
     
 }
 
@@ -15,7 +26,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    color: white;
+    color: var(--white);
     padding-bottom: 150px;
 }
 
@@ -41,13 +52,16 @@ main {
 }
 
 .select_container {
-    background-color: aqua;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .select {
     overflow: hidden;
     width: 175px;
     margin: 50px 0;
+    text-align: center;
 }
 
 .select_list {
@@ -60,11 +74,15 @@ main {
 
 .select_city {
     float: none;
-    color: black;
+    color: var(--black);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+}
+
+.select_city:hover {
+    background-color: lightgray;
 }
 
 .select:hover .select_list {
@@ -81,19 +99,36 @@ main {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);    
 }
 
 .nav_link {
     float: none;
-    color: black;
+    color: var(--black);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;  
+    text-align: left;
+    font-size: 14px;
+}
+
+.nav_link:hover {
+    background-color: lightgray;
 }
 
 .nav:hover .nav_list {
     display: block;
+}
+
+.about {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 25px;
+}
+
+.about_container {
+    background-color: var(--white);
 }
