--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,10 +41,14 @@
         </section>
 
         <!-- about the app -->
-        <h4>About Us</h4>
+        <section class="about_container">
+        <div class="about">
+        <h3>About Us</h4>
         <article>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae aliquam deserunt tenetur sapiente odit voluptatem itaque aliquid placeat a harum esse sit laborum possimus consequuntur, dicta est at rem.
         </article>
+        </div>
+        </section>
     </main>
     <footer>
         <p>Copyright</p>
