--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="styles/cities-index.css">
+    <link rel="stylesheet" href="/styles/cities-index.css">
     <title>All Cities</title>
 </head>
 <body>
   <header>
-
+    <h3> Trail Legs </h3>
     <!-- navigation and app name -->
-    <section class="nav_name">
-        <h3> Trail Legs </h3>
+    <div class="nav">
         <i class="fa fa-bars"></i>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/cities">Cities</a>
-        </nav>
-    </section>
+        <div class="nav_list">
+            <a href="/" class="nav_link">Home</a>
+            <a href="/cities" class="nav_link">Cities</a>
+        </div>
+      </div>
   </header>
   <main>
     <h2>List of Cities</h2>
