--- a/public/styles/cities-index.css
+++ b/public/styles/cities-index.css
@@ -20,7 +20,6 @@ header {
     font-Size: 20px;
     padding: 15px;
     padding-bottom: 50px;
-    margin-bottom: 10px;
     background-image: url(/header/cities-index.jpg);
     background-position: center;
     background-size: cover;
@@ -36,13 +35,22 @@ main {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 140px;
+    padding: 100px;
+    padding-bottom: 200px;
+    background-color: var(--tan);
+}
+
+h2{
+    padding-bottom: 30px;
+    font-size: 35px;
+    color: var(--green);
 }
 
 footer{
     background-color: var(--green);
     text-align: center;
     padding: 20px;
+    color: var(--white)
 }
 
 .nav {
@@ -54,20 +62,53 @@ footer{
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);    
 }
 
 .nav_link {
     float: none;
-    color: black;
+    color: var(--green);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;  
+    text-align: left;
+    font-size: 14px;  
+}
+
+.nav_link:hover {
+    background-color: lightgray;
 }
 
 .nav:hover .nav_list {
     display: block;
 }
 
+.cities{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+.cities_list{
+    margin-left: 10px;
+    position: static;
+}
+
+.cities_list a{
+    text-decoration: none;
+    color: var(--green);
+    font-weight: 900;
+}
+
+.cities_square{
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+    flex-wrap: wrap;
+    display: inline-block;
+    background-color: var(--white);
+    opacity: .6;
+}
