--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -24,13 +24,13 @@
     <h2>List of Cities</h2>
 
     <!-- Loop through cities -->
-    <ul>
+    <div class="cities">
       <% cities.forEach(city => { %>
-          <li>
-            <a href="/cities/<%= city._id %>"><%= city.name %></a>
-          </li>
+        <div class="cities_list">
+            <a href="/cities/<%= city._id %>" class="cities_square"><%= city.name %></a>
+        </div>
       <% }); %>
-    </ul>
+    </div>
   </main>
   <footer>
       <p>Copyright</p>
