--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -27,10 +27,16 @@
     <div class="cities">
       <% cities.forEach(city => { %>
         <div class="cities_list">
-            <a href="/cities/<%= city._id %>" class="cities_square"><%= city.name %></a>
+          <a 
+            style="background-image: url(<%=city.image%>);"
+            href="/cities/<%= city._id %>" 
+            class="cities_square">
+            <%= city.name %>
+          </a>
         </div>
       <% }); %>
     </div>
+    <!-- second loop to add images -->
   </main>
   <footer>
       <p>Copyright</p>
