--- a/public/styles/cities-index.css
+++ b/public/styles/cities-index.css
@@ -56,6 +56,7 @@ footer{
 .nav {
     overflow: hidden;
     width: 25px;
+    margin: 5px;
 }
 
 .nav_list {
@@ -101,6 +102,7 @@ footer{
     text-decoration: none;
     color: var(--white);
     font-weight: 900;
+    box-shadow: -2px -2px 14px #1f1f1f;
 }
 
 .cities_square {
