--- a/public/styles/edit.css
+++ b/public/styles/edit.css
@@ -56,6 +56,7 @@ footer {
 .nav {
     overflow: hidden;
     width: 25px;
+    margin: 5px;
 }
 
 .nav_list {
@@ -94,6 +95,8 @@ button {
     cursor: pointer;
     font-size: 30px;
     color: var(--green);
+    padding: 10px;
+    transition: .3s;
 }
 
 button:hover {
@@ -103,6 +106,8 @@ button:hover {
 .fa-times {
     font-size: 30px;
     color: var(--green);
+    padding: 10px;
+    transition: .3s;
 }
 
 .fa-times:hover {
@@ -114,6 +119,7 @@ input {
     border: 2px solid var(--green);
     border-radius: 3px;
     outline: none;
+    margin-bottom: 15px;
 }
 
 textarea {
@@ -121,6 +127,8 @@ textarea {
     border: 2px solid var(--green);
     border-radius: 3px;
     outline: none;
+    margin-bottom: 15px;
+    resize: none;
 }
 
 select {
@@ -128,4 +136,5 @@ select {
     border: 2px solid var(--green);
     border-radius: 3px;
     outline: none;
+    margin-bottom: 15px;
 }
