--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -66,7 +66,8 @@ footer{
 /* drop down navigation */
 .nav {
     overflow: hidden;
-    width: 25px;  
+    width: 25px;
+    margin: 5px;
 }
 
 .nav_list {
